--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ header {
     display: flex;
     background-color: #1f2937;
     margin-bottom: 0px;
+    border-bottom: 3px solid white;
+
 }
 
 h1 {
@@ -21,9 +23,11 @@ h1 {
 
 
 .logo {
-    font-size: 24px;
+    font-size: 36px;
     color: #f9fAf8;
-    border: 2px solid green;
+    padding: 20px;
+
+    
 }
 
 .links {
@@ -31,7 +35,8 @@ h1 {
     justify-content: flex-end;
     align-items: center;
     color: #e5e7eb;
-    margin-left: auto;
+margin-left: auto;
+margin-right: 25px;
     font-size: 18px;
     width: 40%;
 
@@ -44,7 +49,6 @@ h1 {
 .section1 {
     background-color: #1f2937;
     margin-top: 0px;
-    border: 3px solid green;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -59,23 +63,103 @@ h1 {
 
 .signup {
     background-color: #3882F6;
-    border-radius: 10px;
     color: white;
 }
 
 .sec_1_left {
     margin-right: auto;
-    border: 2px solid blue;
-    max-width: 40%;
+    max-width: 50%;
     margin-left: 5%;
-
-
+    height: 15vh;
 }
 
 .sec_1_right {
     margin-left: auto;
     max-width: 40%;
-    border: 2px solid yellow;
     margin-right: 5%;
 
+}
+
+.section2{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    background-color: lightgray;
+
+}
+h2{
+    text-align: center;
+    color: blue;
+    font-size: 36px;
+}
+
+.smallphotos{
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0px;
+    align-items: last baseline;
+
+
+}
+.imagegroup{
+    padding: 10px;
+    text-align: center;
+
+}
+.smallimage{
+
+    align-items: center;
+
+}
+
+.section3{
+    padding: 15px;
+    font-size: 24px;
+    background-color: lightgray;
+    
+}
+footer{
+    display: flex;
+    justify-items: flex-start;
+    background-color: lightgray;
+    height: 10vh;
+    align-items: center;
+    margin: auto;
+    padding-bottom: 20px;
+
+}
+
+.footeritems{
+    width: 70%;
+    background-color: blue;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 10vh;
+    border-radius: 15px;
+
+}
+
+.action{
+    margin-left: 50px;
+    width: 70%;
+
+}
+h3{
+    font-size: 24px;
+    color: white; 
+    margin: 0%;   
+}
+.actiontext{
+    font-size: 18px;
+    padding: 0px;
+    margin: 0%;
+}
+button{
+    margin-right: 50px;
+    background-color: white;
+    border: 3px solid white;
+    border-radius: 10px;
+    font-size: 24px;
 }
